# commandbook

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: commandbook.toml  commandbook.yaml
src/commandbook/: __init__.py  __main__.py  cli.py
src/commandbook/commands/: builder.py  registry.py
src/commandbook/config/: loader.py  models.py
src/commandbook/connectors/: __init__.py  detector.py  manager.py  models.py  parser.py  session.py
src/commandbook/placeholders/: types.py
src/commandbook/shell/: detect.py  runner.py
src/commandbook/tui/: app.py
src/commandbook/tui/screens/: connector_picker.py  high_severity_confirm.py  placeholder_form.py
src/commandbook/variables/: store.py
tests/: test_app.py  test_builder.py  test_cli.py  test_connectors.py  test_loader.py  test_placeholders.py  test_registry.py  test_runner.py  test_shell.py  test_variables.py
