[project]
name = "commandbook"
version = "0.1.0"
description = "Консольный реестр CLI/shell-команд с плейсхолдерами и fuzzy-поиском"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
]

[project.scripts]
commandbook = "commandbook.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commandbook"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
